--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asyncinterval",
   "description": "Async aware setInterval. Run functions at an interval without overlapping previous calls.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Ghafran Abbas <ghafranabbas@gmail.com>",
   "homepage": "https://github.com/socialradar/asyncInterval",
   "repository": {
@@ -24,11 +24,10 @@
     "mocha": "~1.13.0"
   },
   "keywords": [
-    "lock",
-    "once",
-    "hold",
-    "throttle",
-    "async"
+    "setinterval",
+    "async",
+    "schedule",
+    "settimeout"
   ],
   "bugs": {
     "url": "https://github.com/socialradar/asyncInterval/issues"
